--- a/index.html
+++ b/index.html
@@ -8,93 +8,190 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hiragana</h1>
-    <h2>ひらがな</h2>
-    <table>
-        <tr>
-            <td></td>
-            <td>-</td>
-            <td>K</td>
-            <td>S</td>
-            <td>T</td>
-            <td>N</td>
-            <td>H</td>
-            <td>M</td>
-            <td>Y</td>
-            <td>R</td>
-            <td>W</td>
-            <td>*</td>
-        </tr>
-        <tr>
-            <td>A</td>
-            <td>あ<sub>a</sub></td>
-            <td>か<sub>ka</sub></td>
-            <td>さ<sub>sa</sub></td>
-            <td>た<sub>ta</sub></td>
-            <td>な<sub>na</sub></td>
-            <td>は<sub>ha</sub></td>
-            <td>ま<sub>ma</sub></td>
-            <td>や<sub>ya</sub></td>
-            <td>ら<sub>ra</sub></td>
-            <td>わ<sub>wa</sub></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>I</td>
-            <td>い<sub>i</sub></td>
-            <td>き<sub>ki</sub></td>
-            <td>し<sub>shi</sub></td>
-            <td>ち<sub>chi</sub></td>
-            <td>に<sub>ni</sub></td>
-            <td>ひ<sub>hi</sub></td>
-            <td>み<sub>mi</sub></td>
-            <td></td>
-            <td>り<sub>ri</sub></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>U</td>
-            <td>う<sub>u</sub></td>
-            <td>く<sub>ku</sub></td>
-            <td>す<sub>su</sub></td>
-            <td>つ<sub>tsu</sub></td>
-            <td>ぬ<sub>nu</sub></td>
-            <td>ふ<sub>fu</sub></td>
-            <td>む<sub>mu</sub></td>
-            <td>ゆ<sub>yu</sub></td>
-            <td>る<sub>ru</sub></td>
-            <td></td>
-            <td>ん<sub>n</sub></td>
-        </tr>
-        <tr>
-            <td>E</td>
-            <td>え<sub>e</sub></td>
-            <td>け<sub>ke</sub></td>
-            <td>せ<sub>se</sub></td>
-            <td>て<sub>te</sub></td>
-            <td>ね<sub>ne</sub></td>
-            <td>へ<sub>he</sub></td>
-            <td>め<sub>me</sub></td>
-            <td></td>
-            <td>れ<sub>re</sub></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>O</td>
-            <td>お<sub>o</sub></td>
-            <td>こ<sub>ko</sub></td>
-            <td>そ<sub>so</sub></td>
-            <td>と<sub>to</sub></td>
-            <td>の<sub>no</sub></td>
-            <td>ほ<sub>ho</sub></td>
-            <td>も<sub>mo</sub></td>
-            <td>よ<sub>yo</sub></td>
-            <td>ろ<sub>ro</sub></td>
-            <td>を<sub>o(wo)</sub></td>
-            <td></td>
-        </tr>
-    </table>
+    <div class="table-container" id="hira">
+        <h1>Hiragana</h1>
+        <h2>ひらがな</h2>  
+        <table>
+            <tr>
+                <td></td>
+                <td>-</td>
+                <td>K</td>
+                <td>S</td>
+                <td>T</td>
+                <td>N</td>
+                <td>H</td>
+                <td>M</td>
+                <td>Y</td>
+                <td>R</td>
+                <td>W</td>
+                <td>*</td>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td>あ<sub>a</sub></td>
+                <td>か<sub>ka</sub></td>
+                <td>さ<sub>sa</sub></td>
+                <td>た<sub>ta</sub></td>
+                <td>な<sub>na</sub></td>
+                <td>は<sub>ha</sub></td>
+                <td>ま<sub>ma</sub></td>
+                <td>や<sub>ya</sub></td>
+                <td>ら<sub>ra</sub></td>
+                <td>わ<sub>wa</sub></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>I</td>
+                <td>い<sub>i</sub></td>
+                <td>き<sub>ki</sub></td>
+                <td>し<sub>shi</sub></td>
+                <td>ち<sub>chi</sub></td>
+                <td>に<sub>ni</sub></td>
+                <td>ひ<sub>hi</sub></td>
+                <td>み<sub>mi</sub></td>
+                <td></td>
+                <td>り<sub>ri</sub></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>U</td>
+                <td>う<sub>u</sub></td>
+                <td>く<sub>ku</sub></td>
+                <td>す<sub>su</sub></td>
+                <td>つ<sub>tsu</sub></td>
+                <td>ぬ<sub>nu</sub></td>
+                <td>ふ<sub>fu</sub></td>
+                <td>む<sub>mu</sub></td>
+                <td>ゆ<sub>yu</sub></td>
+                <td>る<sub>ru</sub></td>
+                <td></td>
+                <td>ん<sub>n</sub></td>
+            </tr>
+            <tr>
+                <td>E</td>
+                <td>え<sub>e</sub></td>
+                <td>け<sub>ke</sub></td>
+                <td>せ<sub>se</sub></td>
+                <td>て<sub>te</sub></td>
+                <td>ね<sub>ne</sub></td>
+                <td>へ<sub>he</sub></td>
+                <td>め<sub>me</sub></td>
+                <td></td>
+                <td>れ<sub>re</sub></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>O</td>
+                <td>お<sub>o</sub></td>
+                <td>こ<sub>ko</sub></td>
+                <td>そ<sub>so</sub></td>
+                <td>と<sub>to</sub></td>
+                <td>の<sub>no</sub></td>
+                <td>ほ<sub>ho</sub></td>
+                <td>も<sub>mo</sub></td>
+                <td>よ<sub>yo</sub></td>
+                <td>ろ<sub>ro</sub></td>
+                <td>を<sub>o(wo)</sub></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
+    <button id="turn-right" class="s-btn">&rightarrow;</button>
+    <button id="turn-left" class="s-btn">&leftarrow;</button>
+    <div class="table-container" id="kata">
+        <h1>Katakana</h1>
+        <h2>カタカナ</h2>  
+        <table>
+            <tr>
+                <td></td>
+                <td>-</td>
+                <td>K</td>
+                <td>S</td>
+                <td>T</td>
+                <td>N</td>
+                <td>H</td>
+                <td>M</td>
+                <td>Y</td>
+                <td>R</td>
+                <td>W</td>
+                <td>*</td>
+            </tr>
+            <tr>
+                <td>A</td>
+                <td>ア<sub>a</sub></td>
+                <td>カ<sub>ka</sub></td>
+                <td>サ<sub>sa</sub></td>
+                <td>タ<sub>ta</sub></td>
+                <td>ナ<sub>na</sub></td>
+                <td>ハ<sub>ha</sub></td>
+                <td>マ<sub>ma</sub></td>
+                <td>ヤ<sub>ya</sub></td>
+                <td>ラ<sub>ra</sub></td>
+                <td>ワ<sub>wa</sub></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>I</td>
+                <td>イ<sub>i</sub></td>
+                <td>キ<sub>ki</sub></td>
+                <td>シ<sub>shi</sub></td>
+                <td>チ<sub>chi</sub></td>
+                <td>ニ<sub>ni</sub></td>
+                <td>ヒ<sub>hi</sub></td>
+                <td>ミ<sub>mi</sub></td>
+                <td></td>
+                <td>リ<sub>ri</sub></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>U</td>
+                <td>ウ<sub>u</sub></td>
+                <td>ク<sub>ku</sub></td>
+                <td>ス<sub>su</sub></td>
+                <td>ツ<sub>tsu</sub></td>
+                <td>ヌ<sub>nu</sub></td>
+                <td>フ<sub>fu</sub></td>
+                <td>ム<sub>mu</sub></td>
+                <td>ユ<sub>yu</sub></td>
+                <td>ル<sub>ru</sub></td>
+                <td></td>
+                <td>ン<sub>n</sub></td>
+            </tr>
+            <tr>
+                <td>E</td>
+                <td>エ<sub>e</sub></td>
+                <td>ケ<sub>ke</sub></td>
+                <td>セ<sub>se</sub></td>
+                <td>テ<sub>te</sub></td>
+                <td>ネ<sub>ne</sub></td>
+                <td>ヘ<sub>he</sub></td>
+                <td>メ<sub>me</sub></td>
+                <td></td>
+                <td>レ<sub>re</sub></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>O</td>
+                <td>オ<sub>o</sub></td>
+                <td>コ<sub>ko</sub></td>
+                <td>ソ<sub>so</sub></td>
+                <td>ト<sub>to</sub></td>
+                <td>ノ<sub>no</sub></td>
+                <td>ホ<sub>ho</sub></td>
+                <td>モ<sub>mo</sub></td>
+                <td>ヨ<sub>yo</sub></td>
+                <td>ロ<sub>ro</sub></td>
+                <td>ヲ<sub>o(wo)</sub></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
+    <button class="d-btn" id="down-btn">&downarrow;</button>
+    <div class="settings-container"><h1>Settings</h1></div>
+    <script src="script.js"></script>
 </body>
 </html>
